# levon003.github.io

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  README.md  _config.yml  about.markdown  blog_index.markdown  bsky-links.md  index.html  llms.txt  theme.css
.github/workflows/: scrape-bsky-likes.yml
.opencode/skills/: opencode.json
.opencode/skills/create-blog-post/: SKILL.md
_data/: bsky_links_summary.yml
_drafts/: 2023-12-01-escreening-ux.md  2024-02-01-auroc.md  2024-02-01-incontext-learning.md  2024-structuring-research-narratives.md  2025-04-24-architecture-interviews.md  2025-07-14-farewell-posts.md  2025-10-08-wikipedia-nine-theses.md  2026-04-12-agentic-coding-roundup.md  card-trick.md  friendship-paradox.md  post-ideas.md
_includes/: bsky-authors.html  bsky-link-item.html  bsky-meta.html  footer.html  header.html  note.html  quiz.html  references.html  social.html  tacoma-trees.html
_includes/card-trick/: card-trick-cut.html  card-trick-deal.html  card-trick-josephus.html  card-trick-play.html  card-trick-ring.html
_layouts/: bsky-links.html  home.html  post.html  tag.html
_posts/: 2019-03-15-nlp-for-social-computing-workshop.md  2021-10-29-linear-regression-twitter-workshop.html  2023-08-21-dolma-word-counts.md  2023-10-13-jekyll-on-github.md  2023-10-13-my-research.md  2023-10-17-wishful-mnemonics.md  2023-11-01-llm-tutor-understanding-checks.md  2023-11-25-zach-bio.md  2023-11-26-shakespeare-graphs.md  2023-11-27-useful-links.md  2023-12-01-blogroll.md  2023-12-01-markdown.md  2023-12-16-gaied-sources.md  2023-12-20-clear-corpus.md  2023-12-29-blogroll.md  2024-01-01-youtube-sample.md  2024-01-02-selfcensor-politics-social-media.md  2024-01-08-skrub.md  2024-01-25-cloudsqlproxy-local-docker.md  2024-01-30-debugging-basics.md  2024-01-31-academic-writing.md  2024-02-02-rag-for-math-qa.md  2024-02-05-black-software.md  2024-02-12-grudin-1988.md  2024-02-13-stardew-valley-gold-total.md  2024-02-14-diophantine-math-puzzle.md  2024-02-15-experimental-design-books.md  2024-02-26-max-envelope-problem.md  2024-02-28-wikipedia-unreferenced-articles.md  2024-03-01-label-sleuth.md  2024-03-01-link-dump.md  2024-03-04-allie-latimer.md  2024-03-06-book-constructing-qualitative-methodology.md  2024-03-11-cscw-short-papers.md  2024-03-12-redteam-silver-bullet-paper.md  2024-03-13-requirements-elicitation-for-ml.md  2024-03-21-purposeful-sampling.md  2024-04-09-inconsistent-multiple-testing-corrections.md  2024-04-11-inference-with-predicted-data.md  2024-04-16-incontext-learning.md  (+63 more)
assets/: main.scss
blog/: _config.yml  about.markdown  index.markdown
blog/_posts/: 2023-10-13-my-research.markdown  2023-10-13-welcome-to-jekyll.markdown
files/tacoma_trees/: extract_trees.py  fetch_thumbnails.py  thumbnails.json  trees.json
images/headshots/: headshot_20240717.heic
notebooks/: CrosswordFormatting.ipynb  MaxTwoEnvelopesSimulation.ipynb  StardewValleyCropOdds.ipynb  WikipediaUnferencedArticles.ipynb
scripts/: convert_to_markdown.sh  create_jekyll_tag_stubs.py  create_post_metadata.py  gaied_sources.bib
src/: LangchainPipes.py
src/bsky_link_history/: .gitignore  README.md  check_links.py  enrich.py  pyproject.toml  scrape_likes.py  summarize.py
src/card-trick/: simulate.py
src/chess/: GameAnalysis.ipynb  extract_tags.py
src/graph_generation/: BlueskyDataExtraction.ipynb  GraphGeneration.ipynb  README.md  pyproject.toml
src/langfuse_wrapper/: README.md  pyproject.toml  re_wrapper.py  wrapper_demo.py  wrapt_re_mre.py
src/misc/: README.md  notebooks  pyproject.toml
src/misc/src/levon_misc/leetcode/: april2025.py
src/misc/src/levon_misc/streaming/: rating.py  sbbst.py  tracker.py
src/misc/tests/leetcode/: test_april2025.py
src/misc/tests/streaming/: test_rating.py  test_sbbst.py  test_tracker.py
src/moral_circles/: MoralCircles.ipynb  pyproject.toml  waytz_2019_source_data.xlsx
src/overfitting/: OverfittingDemo.ipynb  README.md  pyproject.toml
src/reward_modeling/: README.md  pyproject.toml
src/stochtree/: README.md  StochtreeExploration.ipynb  pyproject.toml
src/template/: README.md  pyproject.toml
src/tiktok_download/: .gitignore  TikTokUserDataExploration.ipynb
src/torch_threading/: README  TimingAnalysis.ipynb  pyproject.toml  runtimes.ndjson  time_threads.py
src/zotero/: README.md  pyproject.toml
src/zotero/src/notebook/: ZoteroAPIExploration.ipynb
tags/: agents.md  ai2.md  alignment.md  benchmarks.md  bluesky.md  caringbridge.md  chess.md  code.md  course.md  crossword.md  cscw.md  data.md  design.md  docker.md  dread.md  education.md  energy.md  ethics.md  football.md  games.md  governance.md  growth-mindset.md  hci.md  health.md  hoax.md  idea.md  illich.md  langchain.md  law.md  licenses.md  magic.md  marriage.md  misc.md  ml.md  nlp.md  online-communities.md  overfitting.md  paper.md  peer-support.md  politics.md  (+32 more)
