[project]
name = "bsky-link-history"
version = "0.0.1"
description = "Scrape Bluesky likes and extract links for Jekyll"
license = "MIT"
authors = [
  {name = "Zachary Levonian", email = "zacharylevonian@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.55",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "tldextract>=5.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bsky_link_history"]
