[tool.poetry]
name = "moral-circles"
version = "0.0.1"
description = "Moral circles"
authors = [
    "Zachary Levonian <levon003@umn.edu>",
]
license = "MIT"
repository = "https://github.com/levon003/levon003.github.io/tree/main/src/moral_circles"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"
jupyter = "^1.0.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
