[project]
name = "reward_modeling"
version = "0.0.1"
description = "Reward Modeling"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Zachary Levonian", email = "zacharylevonian@gmail.com"},
]
repository = "https://github.com/levon003/levon003.github.io/"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reward_modeling"]
