[tool.poetry]
name = "torch-threading"
version = "0.0.1"
description = "Exploring the threading behavior of PyTorch"
authors = [
    "Zachary Levonian <levon003@umn.edu>",
]
license = "MIT"
repository = "https://github.com/levon003/levon003.github.io/tree/main/src/torch_threading"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.2"
nltk = "^3.8.1"
matplotlib = "^3.9.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
